@@ -1,3 +1,5 @@
+21-August-2011 Removed old platform detection code. The new code is known to run on all supported platforms.
+
 21-August-2011 Removing unnecessary namespace resolution in the Opus code.
 
 21-August-2011 Package definition file (.xml in the package folder) schema change and package backend update to support packages of the same name, but different versions, for different platforms.
